tests/od2trips/errors/format/amitran/testsuite.od2trips
type_missing
begin_missing
duration_negative
origin_missing
